package org.javaopen.di.chap3.domain;

import java.util.List;

public interface IProductService {
    List<DiscountedProduct> getFeaturedProducts();
}
