package org.javaopen.di.chap3.domain;

public interface IUserContext {
    boolean isInRole(Role role);
}
